...
    /// Parse product data located in the app bundle.  These are mapped to an array of Product and displayed in the collection view.
    private func loadData() {
        guard let url = Bundle.main.url(forResource: "products", withExtension: "json") else { return }
        guard let data = try? Data(contentsOf: url) else { return }
        guard let products = JsonUtility<[Product]>.parseJSON(data) else { return }
        self.products = products
        title = "Products"
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        loadData()
        configureView()
...
